--- a/src/index.css
+++ b/src/index.css
@@ -273,21 +273,12 @@ a {
 
     }
 
-    .content{
-        width:90%;
-        margin: auto;
-        height: 80vh;
-    }
-
     .footer{
         width:90%;
         margin: auto;
         min-width: 1230px;
         height: 80vh;
     }
-
-
-
 }
 
 @media (max-width: 990px){
@@ -319,17 +310,9 @@ a {
         margin: auto;
     }
 
-
-    .content{
-        width:70%;
-        margin: auto;
-        height: 70vh;
-    }
-
     .footer{
         width:70%;
         margin: auto;
-        min-width: 990px;
         height: 70vh;
     }
 }
@@ -346,7 +329,7 @@ a {
         display: none;
     }
 
-    .content, .footer {
+    .footer {
         width:60%;
         margin: auto;
         min-width: 770px;
@@ -371,8 +354,7 @@ a {
         font-size: 40px;
     }
 
-
-    .content, .footer {
+    .footer {
         width:50%;
         margin: auto;
         min-width: 575px;
