--- a/src/index.css
+++ b/src/index.css
@@ -185,10 +185,8 @@ h2 {
     vertical-align: top;
     margin: 0 15px;
     position: relative;
-
     color:#fff;
     text-decoration: none;
-
     transition: color .2s linear;
 }
 
@@ -198,16 +196,12 @@ h2 {
     display: block;
     width: 100%;
     height: 3px;
-
-
     background-color: #fce38a;
     opacity: 0;
-
     position: absolute;
     top: 100%;
     left: 0;
     z-index: 1;
-
     transition: opacity .1s;
 }
 
@@ -255,10 +249,9 @@ a {
 }
 
 @media (max-width: 1230px) {
-    .container, .intro {
+    .container, .intro, .footer {
         width:90%;
         margin: auto;
-        min-width: 1230px;
         height: 80vh;
     }
 
@@ -272,27 +265,18 @@ a {
         margin: auto;
 
     }
-
-    .footer{
-        width:90%;
-        margin: auto;
-        min-width: 1230px;
-        height: 80vh;
-    }
 }
 
 @media (max-width: 990px){
-    .container{
+    .container, .footer{
         width:70%;
         margin: auto;
-        min-width: 990px;
         height: 70vh;
     }
 
     .intro{
         width:70%;
         margin: auto;
-        min-width: 990px;
     }
 
     .intro__subtitle{
@@ -309,37 +293,23 @@ a {
         display: none;
         margin: auto;
     }
-
-    .footer{
-        width:70%;
-        margin: auto;
-        height: 70vh;
-    }
 }
 
 @media (max-width: 770px) {
-    .container, .intro {
+    .container, .intro, .footer {
         width:60%;
         margin: auto;
-        min-width: 770px;
         height: 60vh;
     }
 
     .nav {
         display: none;
     }
-
-    .footer {
-        width:60%;
-        margin: auto;
-        min-width: 770px;
-        height: 60vh;
-    }
 }
 
 
 @media (max-width: 575px) {
-    .container, .intro {
+    .container, .intro, .footer {
         width:50%;
         margin: auto;
         min-width: 575px;
@@ -352,13 +322,6 @@ a {
 
     .intro__title {
         font-size: 40px;
-    }
-
-    .footer {
-        width:50%;
-        margin: auto;
-        min-width: 575px;
-        height: 50vh;
     }
 }
 
