--- a/src/index.css
+++ b/src/index.css
@@ -240,6 +240,12 @@ a {
 }
 
 @media (max-width: 1230px) {
+
+    .intro {
+        min-width: 1230px;
+        height: 80vh;
+    }
+
     .intro__subtitle{
         font-size: 52px;
     }
@@ -248,9 +254,18 @@ a {
         font-size: 120px;
 
     }
+
+    .footer {
+        min-width: 1230px;
+    }
 }
 
 @media (max-width: 990px){
+    .intro {
+        min-width: 990px;
+        height: 70vh;
+    }
+
     .intro__subtitle{
         font-size: 32px;
     }
@@ -265,15 +280,35 @@ a {
     main {
         width: 100%;
     }
+
+    .footer {
+        min-width: 990px;
+    }
 }
 
 @media (max-width: 770px) {
+
+    .intro {
+        min-width: 770px;
+        height: 65vh;
+    }
+
     nav {
         display: none;
+    }
+
+    .footer {
+        min-width: 770px;
     }
 }
 
 @media (max-width: 575px) {
+
+    .intro {
+        min-width: 575px;
+        height: 60vh;
+    }
+
     .intro__subtitle {
         font-size: 22px;
     }
@@ -281,12 +316,21 @@ a {
     .intro__title {
         font-size: 40px;
     }
+
+    .footer {
+        min-width: 575px;
+    }
+
 }
 
 .table_furniture {
     padding-top: 60px;
     padding-right: 10px;
     padding-left: 10px;
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 }
 
 #furniture {
